Changed the background color

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<body style="background-color:powderblue;">
+<body style="background-color:lightblue;">
 
 <h1 style="background-color:DodgerBlue;font-family:verdana;color:black;font-size:28;text-align:center;">User Experience</h1>
 
