--- a/index.htm
+++ b/index.htm
@@ -2,29 +2,44 @@
 <html lang="en">
 <body style="background-color:white;">
 
-<h1 style="background-color:DodgerBlue;font-family:verdana;color:black;font-size:28;text-align:center;">User Experience</h1>
+<h1 style="background-color:mediumseagreen;font-family:verdana;color:black;font-size:28;text-align:center;">User Experience</h1>
 
 <hr>
 
 <img src="images/aleksandr-hills.jpg" alt="Meerkats" width="400" height="284"/>
 
 <h2 style="font-family:verdana;">UX Principles</h2>
-<p style="font-family:verdana;color:red">Principle 1.</p>
+<p style="font-family:verdana;border:2px solid tomato;">Principle 1: Visual Hierarchy Guides the Eye</p>
+<p>Visual hierarchy refers to the arrangement or presentation of elements in a way that implies importance. In other words, visual hierarchy
+  influences the order in which the human eye perceives what it sees. This order is created by the visual contrast between forms in a field of perception.
+  Objects with highest contrast to their surroundings are recognized first by the human mind.The term visual hierarchy is used most frequently in the discourse
+  of the visual arts fields, notably so within the field of graphic design.
 <br>
-<p style="font-family:verdana;color:red">Principle 2.</p>
+<pre>The goal of a UI design is to answer three questions:
+
+1. <q>What is this?</q> (Usefulness)
+2. <q>How do I use it?</q> (Usability)
+3. <q>Why should I care?</q> Desirability</pre>
+<p><b> Scanning Patterns: The Predictabiity of the Human Eye</b></p>
+<p>F-Pattern - Applies to traditional text heavy pages like articles and blogs. A reader scans down the left side of the page, looking for interesting keywords in left aligned headings or initial topic sentences, then stopping and reading (ot the right) when he or she comes to something interesting. The results look like some like an F or E.</p>
+<p style="color:red;"><b>Tip:</b></p>
+<p> Align important information on the left and make use of short, bold headlines, bullet points and other such attention grabbers to break up paragraph blocks.
+<p style="font-family:verdana;border:2px solid tomato;">Principle 2.</p>
+<p></p>
+<p style="font-family:verdana;border:2px solid tomato;">Principle 3.</p>
+<p></p>
+<p style="font-family:verdana;border:2px solid tomato;">Principle 4.</p>
+<p></p>
+<p style="font-family:verdana;border:2px solid tomato;">Principle 5.</p>
+<p></p>
+<p style="font-family:verdana;border:2px solid tomato;">Principle 6.</p>
+<p></p>
+<p style="font-family:verdana;border:2px solid tomato;">Principle 7.</p>
 <br>
-<p style="font-family:verdana;color:red">Principle 3.</p>
+<h3 style="font-family:verdana;">References</h3>
+<a> https://99designs.co.uk/blog/tips-en-gb/6-principles-of-visual-hierarchy/</a>
 <br>
-<p style="font-family:verdana;color:red">Principle 4.</p>
-<br>
-<p style="font-family:verdana;color:red">Principle 5.</p>
-<br>
-<p style="font-family:verdana;color:red">Principle 6.</p>
-<br>
-<p style="font-family:verdana;color:red">Principle 7.</p>
-<br>
-<h3 style="font-family:verdana;">Useful Links</h3>
-<a href="https://www.usability.gov/what-and-why/user-experience.com">Usability Org </a>
+<a>https://www.awwwards.com/understanding-web-ui-visual-hierarchy.html</a>
 
 </body>
 </html>
