--- a/index.htm
+++ b/index.htm
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<body style="background-color:white;">
-
+<head>
+<style>
+body {background-color: powderblue;}
+</style>
+</head>
+<body>
 <h1 style="background-color:mediumseagreen;font-family:verdana;color:black;font-size:28;text-align:center;">User Experience</h1>
-
 <hr>
-
 <img src="images/aleksandr-hills.jpg" alt="Meerkats" width="400" height="284"/>
-
 <h2 style="font-family:verdana;">UX Principles</h2>
 <p style="font-family:verdana;border:2px solid tomato;">Principle 1: Visual Hierarchy Guides the Eye</p>
 <p>Visual hierarchy refers to the arrangement or presentation of elements in a way that implies importance. In other words, visual hierarchy
